build/resources/test/LO-2/ValidPrograms/test_96.lo
// *Good testcase*
// Arithmetic Operations
// main return value: 163
// Author: Tyler Collins


int main() {
    int a, b, c, d;
  {
    a = 1;
    b = 10;
    c = 100;
    d = 1000;

    return ((((d / 7) + (c / 9)) + (b - 1)) + a);
  }
}

