build/resources/test/LO-2/InvalidPrograms/test_22.lo
// Incorrect arguments

int main() {
    int a, b;
    {
        a = xyz(1, 2, 3);
        return a;
    }
}

int xyz(int a, String b, int c) {
    String result;
    {
        result = b;
        return a;
    }
}